--- a/.github/workflows/master_deepseekmodel.yml
+++ b/.github/workflows/master_deepseekmodel.yml
@@ -30,7 +30,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r ./Deepseek model DOC recog/requirements.txt
+        run: pip install -r ./Deepseek_model_DOC_recog/requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
